--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <main>
     <div class="card">
       <img src="./assets/images/illustration-article.svg" alt="">
-      <p class="category">Learning</p>
-      <p class="publish">Published 21 Dec 2023</p>
+      <p class="category"><strong>Learning</strong></p>
+      <span class="publish">Published 21 Dec 2023</span>
       <h1 class="title">HTML & CSS foundations</h1>
       <p class="description">These languages are the backbone of every website, defining structure, content, and presentation.</p>
       <div class="publisher">
